--- a/123.md
+++ b/123.md
@@ -3,28 +3,30 @@
 2. Создать папку на рабочим столе отокрыть её в VS Studio и открыть терминал
 3. Для начала работы необходимо проверить правильно ли установлен git, командой (git --
 version)
+4. Скачать и установить программу Git Hub
 #**Коммиты**
-1. Для начала необходимо создать файл, назвать его
+1. Для начала необходимо создать файл, назвать его (если необходимо использовать разметку Markdown, то файл должен иметь расширение *md)
 2. Записать в него информацию
 3. сохранить Файл "ctrl + S"
 4. Веести команду git add название файла, или для простаты команду git .
 5. Создать коммит командой git commit -m "название коммита"
+6. Первый коммит принято называеть - First coomit
 #**Список коммитов**
 1. для того чтобы вывести спиок коммитов нужно написать команду git log
 2. для упрощенного просмотра git log --oneline 
 #**Ветки**
-1. когда вводиться команда git init автоматически создаеться ветка Master
+1. когда вводится команда git init автоматически создается ветка Master
 2. для создания новой ветки используеться команда git branch название ветки
-3. для перехода на новую ветку git checkout название ветки
-4. для выведение списка git branch
-5. для вливание в текущую ветку git merge название ветки
+3. для перехода на новую ветку git checkout название ветки (можно использовать первые несколько символов названия и клавишу Таб)
+4. для выведения списка веток используется команда git branch, эта же команда покажет, в какой ветке мы находимся в данный момент
+5. для вливание в текущую ветку git merge название вливаемой ветки
 6. для удаление слитой ветки git branch -d название ветки
 #**Переход**
-1. Что бы перейти от одного коммита к другому нужно ввести команду git checkout уникальный номер коммита который указан в спимке коммитов
+1. Что бы перейти от одного коммита к другому нужно ввести команду git checkout уникальный номер коммита который указан в спимке коммитов (достаточно первые четыре-пять символов)
 #**Работа с удаленным репозиторием**
 1. Что бы скоприровать на локальный диск внешний репозитрий команда git clone адрес ссылки
-2.что бы загрузить с локального на удаленный команда git push
-3. Чтобы принять на локальном изменения с удаленого git pul
+2. Что бы выгрузить с локального на удаленный команда git push
+3. Чтобы принять на локальном изменения с удаленого git pull
 4. Чтобы предложить изменения стороннему разработчику 
 необходимо в *GitHub* перейти в его репозиторий и 
 нажать кнопку *Fork*.
@@ -41,7 +43,7 @@ VSCode ввести команду *git clone
 для фиксации изменений.
 9. И командой *git push --set-upstream origin 
 branch_fork* передать  изменения в *GitHub* для 
-предачи изменеий владельцу репозитория
+предачи изменеий владельцу репозитория (origin в данном случае это произвольное имя)
 10. Для этого в *GitHub* необходимо активировать 
 кнопку *Compare & pull request* и в появившемся окне 
 нажать кнопку *Create pull request*. Файл направлен на
